Client side entities work